--- a/HistoryTrivia/package.json
+++ b/HistoryTrivia/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.25.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "string-similarity": "^4.0.1"
   }
 }
